driver/tests/snap/type_error/pi_arity_mismatch_too_few/0_input.splic
// ERROR: too few arguments to a two-arg function
def add(x: u64, y: u64) -> u64 = {
    x + y
};

def test() -> u64 = {
    add(1)
};
